--- a/App/static/style.css
+++ b/App/static/style.css
@@ -42,7 +42,7 @@ Last Update: Feb 22, 2019
 @import url(css/magnific-popup.css);
 @import url(css/font-awesome.min.css);
 @import url(css/default-assets/themify-icons.css);
-@import url(css/style.css);
+@import url(style.css);
 /* :: 01.0 Reboot CSS */
 
 * {
