--- a/templates/App/index.html
+++ b/templates/App/index.html
@@ -112,7 +112,7 @@
     <section class="welcome-area" data-aos="fade-right-up" data-aos-duration="3000">
         <div class="welcome-slides owl-carousel">
 
-            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(static/image/bg/latar-1.JPG);">
+            <div class="single-welcome-slide bg-img bg-overlay" style="background-image: url(App/static/image/bg/latar-1.JPG);">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
 
